Sculpting template crash #98784

Closed
opened 2022-06-11 03:58:29 +02:00 by Nelson · 21 comments

System Information
Operating system: windows 10

Blender Version
Broken: blender-3.3.0-alpha+master.add1da52ad78-windows.amd64-release

Exact steps for others to reproduce the error
File/new/sculpting
all fine
now change the shading to something other than material (single for example)
do a brush stroke
crash

blender_2022-06-11_02-37-47.mp4

**System Information** Operating system: windows 10 **Blender Version** Broken: blender-3.3.0-alpha+master.add1da52ad78-windows.amd64-release **Exact steps for others to reproduce the error** File/new/sculpting all fine now change the shading to something other than material (single for example) do a brush stroke crash [blender_2022-06-11_02-37-47.mp4](https://archive.blender.org/developer/F13144507/blender_2022-06-11_02-37-47.mp4)
Author

Added subscriber: @NelsonNAS

Added subscriber: @NelsonNAS
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. I can not repro the crash in same buildbot build: 3.3, add1da52ad
Can you get the crash with factory reset?: {nav File > Defaults > Loaf Factory Settings}
Upload crash logs if factory setting does not help: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log

Hi, thanks for the report. I can not repro the crash in same buildbot build: 3.3, add1da52ad78 Can you get the crash with factory reset?: {nav File > Defaults > Loaf Factory Settings} Upload crash logs if factory setting does not help: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log
Author

@PratikPB2123 Hi, still crashes with the factory settings
Here's the crash log
blender.crash.txt
Maybe it's windows only problem? Are you on windows?
Also note that it only crashes when I use the sculpting template (File/new/sculpting)
If I don't load that template it works fine.

@PratikPB2123 Hi, still crashes with the factory settings Here's the crash log [blender.crash.txt](https://archive.blender.org/developer/F13145270/blender.crash.txt) Maybe it's windows only problem? Are you on windows? Also note that it only crashes when I use the sculpting template (File/new/sculpting) If I don't load that template it works fine.
Member

Hi, thanks for the file. Yes, I'm using Windows too.
Crash occurred in nvoglv64.dll module (is mentioned in crash .txt file)
AFAIK, nvoglv64.dll is related with Nvidia GPU drivers.
Reinstall or upgrade your GPU drivers and see if that resolves the crash or not: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html
Please also upload system info file: {nav help > Save System Info}
Tested in:

Operating system : Windows-10-10.0.18362-SP0 64 Bits
Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Hi, thanks for the file. Yes, I'm using Windows too. Crash occurred in nvoglv64.dll module (is mentioned in crash .txt file) AFAIK, nvoglv64.dll is related with Nvidia GPU drivers. Reinstall or upgrade your GPU drivers and see if that resolves the crash or not: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html Please also upload system info file: {nav help > Save System Info} Tested in: ```System Information Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

I was able to reproduce the bug.

I was able to reproduce the bug.

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I can confirm as well. Here's the relevant bits from ASAN:

=================================================================
==22280==ERROR: AddressSanitizer: heap-use-after-free on address 0x12c0a47a0dd0 at pc 0x7ff7532e265a bp 0x00e9119fe120 sp 0x00e9119fe120
READ of size 8 at 0x12c0a47a0dd0 thread T0
    - 0 0x7ff7532e2659 in draw_shgroup E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1038
    - 1 0x7ff7532e3374 in drw_draw_pass_ex E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1177
    - 2 0x7ff7532dc19d in DRW_draw_pass E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1217
    - 3 0x7ff75340c2ce in workbench_draw_sample E:\source\blender-git\blender\source\blender\draw\engines\workbench\workbench_engine.c:540
    - 4 0x7ff75340eed8 in workbench_draw_scene E:\source\blender-git\blender\source\blender\draw\engines\workbench\workbench_engine.c:615
    - 5 0x7ff7532abd1d in drw_engines_draw_scene E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1092
    - 6 0x7ff75329aef4 in DRW_draw_render_loop_ex E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1714
    - 7 0x7ff753299a30 in DRW_draw_view E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1593

0x12c0a47a0dd0 is located 144 bytes inside of 256-byte region [0x12c0a47a0d40,0x12c0a47a0e40)
freed by thread T0 here:
    - 0 0x7ffd80a105b2  (E:\source\blender-git\build-full-asan\bin\Debug\clang_rt.asan_dbg_dynamic-x86_64.dll+0x1800505b2)
    - 1 0x7ff761fd0509 in MEM_lockfree_freeN E:\source\blender-git\blender\intern\guardedalloc\intern\mallocn_lockfree_impl.c:116
    - 2 0x7ff761624291 in blender::gpu::GLBatch::operator delete(void *) E:\source\blender-git\blender\source\blender\gpu\opengl\gl_batch.hh:113
    - 3 0x7ff761624666 in blender::gpu::GLBatch::`vector deleting dtor'(unsigned int) (E:\source\blender-git\build-full-asan\bin\Debug\blender.exe+0x152254666)
    - 4 0x7ff7616191dc in GPU_batch_discard E:\source\blender-git\blender\source\blender\gpu\intern\gpu_batch.cc:114
    - 5 0x7ff761613ebb in gpu_pbvh_buffers_clear E:\source\blender-git\blender\source\blender\gpu\intern\gpu_buffers.c:1455
    - 6 0x7ff76160fae6 in GPU_pbvh_buffers_free E:\source\blender-git\blender\source\blender\gpu\intern\gpu_buffers.c:1481
    - 7 0x7ff75205afd4 in pbvh_free_draw_buffers E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:1389
    - 8 0x7ff752066783 in pbvh_update_draw_buffers E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:1442
    - 9 0x7ff75204c5d1 in BKE_pbvh_draw_cb E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:2867
    - 10 0x7ff7532d5876 in drw_sculpt_generate_calls E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_data.c:1236
    - 11 0x7ff7532c9ae4 in DRW_shgroup_call_sculpt E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_data.c:1265
    #12 0x7ff753513ac3 in OVERLAY_sculpt_cache_populate E:\source\blender-git\blender\source\blender\draw\engines\overlay\overlay_sculpt.c:56
I can confirm as well. Here's the relevant bits from ASAN: ``` ================================================================= ==22280==ERROR: AddressSanitizer: heap-use-after-free on address 0x12c0a47a0dd0 at pc 0x7ff7532e265a bp 0x00e9119fe120 sp 0x00e9119fe120 READ of size 8 at 0x12c0a47a0dd0 thread T0 - 0 0x7ff7532e2659 in draw_shgroup E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1038 - 1 0x7ff7532e3374 in drw_draw_pass_ex E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1177 - 2 0x7ff7532dc19d in DRW_draw_pass E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_exec.c:1217 - 3 0x7ff75340c2ce in workbench_draw_sample E:\source\blender-git\blender\source\blender\draw\engines\workbench\workbench_engine.c:540 - 4 0x7ff75340eed8 in workbench_draw_scene E:\source\blender-git\blender\source\blender\draw\engines\workbench\workbench_engine.c:615 - 5 0x7ff7532abd1d in drw_engines_draw_scene E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1092 - 6 0x7ff75329aef4 in DRW_draw_render_loop_ex E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1714 - 7 0x7ff753299a30 in DRW_draw_view E:\source\blender-git\blender\source\blender\draw\intern\draw_manager.c:1593 0x12c0a47a0dd0 is located 144 bytes inside of 256-byte region [0x12c0a47a0d40,0x12c0a47a0e40) freed by thread T0 here: - 0 0x7ffd80a105b2 (E:\source\blender-git\build-full-asan\bin\Debug\clang_rt.asan_dbg_dynamic-x86_64.dll+0x1800505b2) - 1 0x7ff761fd0509 in MEM_lockfree_freeN E:\source\blender-git\blender\intern\guardedalloc\intern\mallocn_lockfree_impl.c:116 - 2 0x7ff761624291 in blender::gpu::GLBatch::operator delete(void *) E:\source\blender-git\blender\source\blender\gpu\opengl\gl_batch.hh:113 - 3 0x7ff761624666 in blender::gpu::GLBatch::`vector deleting dtor'(unsigned int) (E:\source\blender-git\build-full-asan\bin\Debug\blender.exe+0x152254666) - 4 0x7ff7616191dc in GPU_batch_discard E:\source\blender-git\blender\source\blender\gpu\intern\gpu_batch.cc:114 - 5 0x7ff761613ebb in gpu_pbvh_buffers_clear E:\source\blender-git\blender\source\blender\gpu\intern\gpu_buffers.c:1455 - 6 0x7ff76160fae6 in GPU_pbvh_buffers_free E:\source\blender-git\blender\source\blender\gpu\intern\gpu_buffers.c:1481 - 7 0x7ff75205afd4 in pbvh_free_draw_buffers E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:1389 - 8 0x7ff752066783 in pbvh_update_draw_buffers E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:1442 - 9 0x7ff75204c5d1 in BKE_pbvh_draw_cb E:\source\blender-git\blender\source\blender\blenkernel\intern\pbvh.c:2867 - 10 0x7ff7532d5876 in drw_sculpt_generate_calls E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_data.c:1236 - 11 0x7ff7532c9ae4 in DRW_shgroup_call_sculpt E:\source\blender-git\blender\source\blender\draw\intern\draw_manager_data.c:1265 #12 0x7ff753513ac3 in OVERLAY_sculpt_cache_populate E:\source\blender-git\blender\source\blender\draw\engines\overlay\overlay_sculpt.c:56 ```

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Ok, thanks for checking this report :)
Is this a regression? We could raise the priority in that case.

Ok, thanks for checking this report :) Is this a regression? We could raise the priority in that case.
Author

In #98784#1373044, @PratikPB2123 wrote:
Is this a regression?

It is.
A few builds ago it was working fine.

> In #98784#1373044, @PratikPB2123 wrote: > Is this a regression? It is. A few builds ago it was working fine.
Member

Thanks. And what about 3.2 release version? Do you get same crash there?
@deadpin, can you find the responsible commit?

Thanks. And what about 3.2 release version? Do you get same crash there? @deadpin, can you find the responsible commit?

This issue was referenced by afe57c4001

This issue was referenced by afe57c400129c7ec9ddf6edc5db3745d26b6a6cf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-06-12 21:13:25 +02:00
Author

@PratikPB2123 @JosephEagar @deadpin
The initial crash was resolved, but it now crashes if I choose the Texture color type after choosing something else first.
So here are the steps to make it crash:
File/New/Sculpting
In the shading popover switch to a color type like "Single" for example
Then switch to "Texture"
Crash
blender_2022-06-13_06-34-41.mp4
blender.crash.txt

@PratikPB2123 @JosephEagar @deadpin The initial crash was resolved, but it now crashes if I choose the Texture color type after choosing something else first. So here are the steps to make it crash: File/New/Sculpting In the shading popover switch to a color type like "Single" for example Then switch to "Texture" Crash [blender_2022-06-13_06-34-41.mp4](https://archive.blender.org/developer/F13154301/blender_2022-06-13_06-34-41.mp4) [blender.crash.txt](https://archive.blender.org/developer/F13154300/blender.crash.txt)

In #98784#1373428, @NelsonNAS wrote:
Then switch to "Texture"
Crash

I can confirm the crash...
Also, switching back to "Material" also crashes...

> In #98784#1373428, @NelsonNAS wrote: > Then switch to "Texture" > Crash I can confirm the crash... Also, switching back to "Material" also crashes...
Member

@NelsonNAS hi, sorry I missed your email notification
Could you please open a new report for this? (Original crash has been resolved and reproducing steps are also bit different)
BTW, I'm not able to repro the crash.

@NelsonNAS hi, sorry I missed your email notification Could you please open a new report for this? (Original crash has been resolved and reproducing steps are also bit different) BTW, I'm not able to repro the crash.
Author

In #98784#1373603, @PratikPB2123 wrote:>
Could you please open a new report for this?

#98842 (Regression: Switching shading color type crashes blender (using the sculpting template))

> In #98784#1373603, @PratikPB2123 wrote:> > Could you please open a new report for this? #98842 (Regression: Switching shading color type crashes blender (using the sculpting template))
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98784
No description provided.